force-app/main/default/objects/Error_Heap__c/Error_Heap__c.object-meta.xml
<CustomObject>
    <label>Error Heap</label>
    <nameField>
        <displayFormat>ER -{0000000}</displayFormat>
        <label>Error Heap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Heaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>