force-app/main/default/objects/Error_Heap__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error Trace String</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>