force-app/main/default/objects/Error_Heap__c/fields/Error_Line_NO__c.field-meta.xml
<CustomField>
    <fullName>Error_Line_NO__c</fullName>
    <label>Error Line NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>